--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,14 +7,24 @@
     tools:context=".ui.SplashActivity">
 
     <ImageView
+        android:id="@+id/img_app"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/ofad"
+        tools:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/img_app" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
